--- a/src/app/note-card/note-card.component.scss
+++ b/src/app/note-card/note-card.component.scss
@@ -14,6 +14,13 @@
             transform: scale(1);
         }
     }
+    @include for-phone-only{
+       .x-button{
+        opacity: 1;
+        height: 40px;
+        width: 40px;
+       }
+    }
 
     .note-card-content{
         padding:10px 25px;
@@ -22,6 +29,7 @@
             margin: 0!important;
             font-size: 22px;
             font-weight: bold;
+            overflow-wrap: break-word;
             color: $purple;
         }
         .note-card-body{
